tools/c7n_azure/tests_azure/cassettes/NetworkSecurityGroupTest.test_open_ports.json
{
    "version": 1,
    "interactions": [
        {
            "request": {
                "method": "GET",
                "uri": "https://management.azure.com/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/providers/Microsoft.Network/networkSecurityGroups?api-version=2020-08-01",
                "body": null,
                "headers": {}
            },
            "response": {
                "status": {
                    "code": 200,
                    "message": "OK"
                },
                "headers": {
                    "content-length": [
                        "29056"
                    ],
                    "date": [
                        "Mon, 15 Mar 2021 23:39:47 GMT"
                    ],
                    "x-ms-original-request-ids": [
                        "fec216a8-e25c-46b1-85ac-4cdd12902e72",
                        "9bc43005-a962-43b3-be95-a4088f70077a",
                        "bbba1870-9cf3-43dd-b354-016baffab124"
                    ],
                    "cache-control": [
                        "no-cache"
                    ],
                    "content-type": [
                        "application/json; charset=utf-8"
                    ]
                },
                "body": {
                    "data": {
                        "value": [
                            {
                                "name": "c7n-nsg",
                                "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg",
                                "etag": "W/\"95ab7ee9-b501-403a-9d79-b69e24b26900\"",
                                "type": "Microsoft.Network/networkSecurityGroups",
                                "location": "eastus",
                                "properties": {
                                    "provisioningState": "Succeeded",
                                    "resourceGuid": "73755b2a-d58b-47db-8deb-76ba8ddbde0f",
                                    "securityRules": [
                                            "name": "test4",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test4",
                                            "etag": "W/\"95ab7ee9-b501-403a-9d79-b69e24b26900\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "TCP",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "22",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 320,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test5",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test5",
                                            "etag": "W/\"95ab7ee9-b501-403a-9d79-b69e24b26900\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "TCP",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "22",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 300,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test6",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test6",
                                            "etag": "W/\"95ab7ee9-b501-403a-9d79-b69e24b26900\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "88-90",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 330,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        }
                                    ],
                                    "defaultSecurityRules": [
                                        {
                                            "name": "AllowVnetInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/AllowVnetInBound",
                                            "etag": "W/\"95ab7ee9-b501-403a-9d79-b69e24b26900\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow inbound traffic from all VMs in VNET",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "VirtualNetwork",
                                                "destinationAddressPrefix": "VirtualNetwork",
                                                "access": "Allow",
                                                "priority": 65000,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowAzureLoadBalancerInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                                            "etag": "W/\"95ab7ee9-b501-403a-9d79-b69e24b26900\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow inbound traffic from azure load balancer",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "AzureLoadBalancer",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 65001,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "DenyAllInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/DenyAllInBound",
                                            "etag": "W/\"95ab7ee9-b501-403a-9d79-b69e24b26900\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Deny all inbound traffic",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 65500,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowVnetOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/AllowVnetOutBound",
                                            "etag": "W/\"95ab7ee9-b501-403a-9d79-b69e24b26900\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "VirtualNetwork",
                                                "destinationAddressPrefix": "VirtualNetwork",
                                                "access": "Allow",
                                                "priority": 65000,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowInternetOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/AllowInternetOutBound",
                                            "etag": "W/\"95ab7ee9-b501-403a-9d79-b69e24b26900\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow outbound traffic from all VMs to Internet",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "Internet",
                                                "access": "Allow",
                                                "priority": 65001,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "DenyAllOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/DenyAllOutBound",
                                            "etag": "W/\"95ab7ee9-b501-403a-9d79-b69e24b26900\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Deny all outbound traffic",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 65500,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        }
                                    ]
                                }
                            }
                        ]
                    }
                }
            }
        },
        {
            "request": {
                "method": "PUT",
                "uri": "https://management.azure.com/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/c7n-policy-baea42b8-85e7-11eb-b168-00155d1e47af?api-version=2020-08-01",
                "body": "mock_body",
                "headers": {}
            },
            "response": {
                "status": {
                    "code": 201,
                    "message": "Created"
                },
                "headers": {
                    "content-length": [
                        "835"
                    ],
                    "x-ms-ratelimit-remaining-subscription-writes": [
                        "1199"
                    ],
                    "x-ms-arm-service-request-id": [
                        "9a245a03-0026-49cd-b91d-04251ff0cead"
                    ],
                    "date": [
                        "Mon, 15 Mar 2021 23:39:47 GMT"
                    ],
                    "cache-control": [
                        "no-cache"
                    ],
                    "content-type": [
                        "application/json; charset=utf-8"
                    ],
                    "azure-asyncoperation": [
                        "https://management.azure.com/subscriptions/632790a5-a1aa-4e0c-8cc1-fafbee1d5b39/providers/Microsoft.Network/locations/eastus/operations/94868464-2e18-470b-baca-767a7973a50f?api-version=2020-08-01"
                    ]
                },
                "body": {
                    "data": {
                        "name": "c7n-policy-baea42b8-85e7-11eb-b168-00155d1e47af",
                        "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/c7n-policy-baea42b8-85e7-11eb-b168-00155d1e47af",
                        "etag": "W/\"292683b5-36c5-4f24-8e89-774e6cbc45b4\"",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "provisioningState": "Updating",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 280,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "1000-1100"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                }
            }
        },
        {
            "request": {
                "method": "GET",
                "uri": "https://management.azure.com/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/providers/Microsoft.Network/networkSecurityGroups?api-version=2020-08-01",
                "body": null,
                "headers": {}
            },
            "response": {
                "status": {
                    "code": 200,
                    "message": "OK"
                },
                "headers": {
                    "content-length": [
                        "29764"
                    ],
                    "date": [
                        "Mon, 15 Mar 2021 23:39:47 GMT"
                    ],
                    "x-ms-original-request-ids": [
                        "2d218b02-f94f-439f-b943-e3566b527188",
                        "22f0b01e-83f6-4068-ad20-09fc2e3107eb",
                        "700bc91e-4d94-4b33-b03c-259e848f9067"
                    ],
                    "cache-control": [
                        "no-cache"
                    ],
                    "content-type": [
                        "application/json; charset=utf-8"
                    ]
                },
                "body": {
                    "data": {
                        "value": [
                            {
                                "name": "c7n-nsg",
                                "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg",
                                "etag": "W/\"a8a5b3ab-17cb-4f04-b029-fd659ce58c95\"",
                                "type": "Microsoft.Network/networkSecurityGroups",
                                "location": "eastus",
                                "properties": {
                                    "provisioningState": "Succeeded",
                                    "resourceGuid": "73755b2a-d58b-47db-8deb-76ba8ddbde0f",
                                    "securityRules": [
                                        {
                                            "name": "test1",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test1",
                                            "etag": "W/\"a8a5b3ab-17cb-4f04-b029-fd659ce58c95\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "80",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 300,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test2",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test2",
                                            "etag": "W/\"a8a5b3ab-17cb-4f04-b029-fd659ce58c95\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 310,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [
                                                    "8080-8084",
                                                    "8086"
                                                ],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test3",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test3",
                                            "etag": "W/\"a8a5b3ab-17cb-4f04-b029-fd659ce58c95\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "8086",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 290,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test4",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test4",
                                            "etag": "W/\"a8a5b3ab-17cb-4f04-b029-fd659ce58c95\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "TCP",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "22",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 320,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test5",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test5",
                                            "etag": "W/\"a8a5b3ab-17cb-4f04-b029-fd659ce58c95\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "TCP",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "22",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 300,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test6",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test6",
                                            "etag": "W/\"a8a5b3ab-17cb-4f04-b029-fd659ce58c95\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "88-90",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 330,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "c7n-policy-baea42b8-85e7-11eb-b168-00155d1e47af",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/c7n-policy-baea42b8-85e7-11eb-b168-00155d1e47af",
                                            "etag": "W/\"a8a5b3ab-17cb-4f04-b029-fd659ce58c95\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 280,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [
                                                    "1000-1100"
                                                ],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        }
                                    ],
                                    "defaultSecurityRules": [
                                        {
                                            "name": "AllowVnetInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/AllowVnetInBound",
                                            "etag": "W/\"a8a5b3ab-17cb-4f04-b029-fd659ce58c95\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow inbound traffic from all VMs in VNET",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "VirtualNetwork",
                                                "destinationAddressPrefix": "VirtualNetwork",
                                                "access": "Allow",
                                                "priority": 65000,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowAzureLoadBalancerInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                                            "etag": "W/\"a8a5b3ab-17cb-4f04-b029-fd659ce58c95\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow inbound traffic from azure load balancer",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "AzureLoadBalancer",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 65001,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "DenyAllInBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/DenyAllInBound",
                                            "etag": "W/\"a8a5b3ab-17cb-4f04-b029-fd659ce58c95\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Deny all inbound traffic",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 65500,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowVnetOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/AllowVnetOutBound",
                                            "etag": "W/\"a8a5b3ab-17cb-4f04-b029-fd659ce58c95\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "VirtualNetwork",
                                                "destinationAddressPrefix": "VirtualNetwork",
                                                "access": "Allow",
                                                "priority": 65000,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowInternetOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/AllowInternetOutBound",
                                            "etag": "W/\"a8a5b3ab-17cb-4f04-b029-fd659ce58c95\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow outbound traffic from all VMs to Internet",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "Internet",
                                                "access": "Allow",
                                                "priority": 65001,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "DenyAllOutBound",
                                            "id": "/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/DenyAllOutBound",
                                            "etag": "W/\"a8a5b3ab-17cb-4f04-b029-fd659ce58c95\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Deny all outbound traffic",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 65500,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        }
                                    ]
                                }
                            }
                        ]
                    }
                }
            }
        }
    ]
}
